name:                servant-client-jsaddle
version:             0.13
synopsis: automatic derivation of querying functions for servant webservices for jsaddle (GHCJS, GHC + WebKit, GHC + websockets, etc)
description:
  This library lets you automatically derive Haskell functions that
  let you query each endpoint of a <http://hackage.haskell.org/package/servant servant> webservice.
  .
  See <http://haskell-servant.readthedocs.org/en/stable/tutorial/Client.html the client section of the tutorial>.
  .
  <https://github.com/haskell-servant/servant/blob/master/servant-client/CHANGELOG.md CHANGELOG>
license:             BSD3
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2014-2016 Zalora South East Asia Pte Ltd, 2016-2017 Servant Contributors
category:            Servant, Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.2
homepage:            http://haskell-servant.readthedocs.org/
Bug-reports:         http://github.com/haskell-servant/servant/issues
extra-source-files:
  CHANGELOG.md
  README.md
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:
    Servant.Client.JSaddle
    Servant.Client.Internal.JSaddleXhrClient
  build-depends:
      base                  >= 4.7      && < 4.13
    , bytestring            >= 0.10     && < 0.11
    , case-insensitive      >= 1.2.0.0  && < 1.3.0.0
    , containers            >= 0.5      && < 0.7
    , exceptions            >= 0.8      && < 0.11
    , http-media
    , http-types
    , jsaddle
    , jsaddle-dom
    , monad-control         >= 1.0.0.4  && < 1.1
    , mtl                   >= 2.1      && < 2.3
    , semigroupoids         >= 4.3      && < 5.4
    , servant-client-core   == 0.13.*
    , string-conversions    >= 0.3      && < 0.5
    , text
    , transformers          >= 0.3      && < 0.6
    , transformers-base     >= 0.4.4    && < 0.5
  if impl(ghcjs)
    build-depends: ghcjs-base
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  if impl(ghc >= 8.0)
    ghc-options: -Wno-redundant-constraints


test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Servant.Client.JsSpec

  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
      base
    , aeson
    , bytestring
    , case-insensitive
    , containers
    , exceptions
    , http-media
    , http-types
    , jsaddle
    , jsaddle-webkit2gtk
    , jsaddle-dom
    , monad-control
    , mtl
    , semigroupoids
    , servant
    , servant-client-core
    , servant-client-jsaddle
    , servant-server
    , string-conversions
    , text
    , transformers
    , transformers-base
    , wai
    , wai-extra
    , warp

  -- Additonal dependencies
  build-depends:
      hspec
    , QuickCheck

  build-tool-depends:
    hspec-discover:hspec-discover >=2.4.4 && <2.5
