name:                servant-client
version:             0.14
x-revision:          2

synopsis: automatical derivation of querying functions for servant webservices
category:            Servant, Web
description:
  This library lets you derive automatically Haskell functions that
  let you query each endpoint of a <http://hackage.haskell.org/package/servant servant> webservice.
  .
  See <http://haskell-servant.readthedocs.org/en/stable/tutorial/Client.html the client section of the tutorial>.
  .
  <https://github.com/haskell-servant/servant/blob/master/servant-client/CHANGELOG.md CHANGELOG>

license:             BSD3
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2014-2016 Zalora South East Asia Pte Ltd, 2016-2017 Servant Contributors
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.8.4
  GHC==7.10.3
  GHC==8.0.2
  GHC==8.2.2
  GHC==8.4.4
  GHC==8.6.1

homepage:            http://haskell-servant.readthedocs.org/
Bug-reports:         http://github.com/haskell-servant/servant/issues
extra-source-files:
  include/*.h
  CHANGELOG.md
  README.md
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:
    Servant.Client
    Servant.Client.Internal.HttpClient

  -- Bundled with GHC: Lower bound to not force re-installs
  -- text and mtl are bundled starting with GHC-8.4
  --
  -- note: mtl lower bound is so low because of GHC-7.8
  build-depends:
      base                  >= 4.7      && < 4.13
    , bytestring            >= 0.10.4.0 && < 0.11
    , containers            >= 0.5.5.1  && < 0.7
    , mtl                   >= 2.1      && < 2.3
    , text                  >= 1.2.3.0  && < 1.3
    , time                  >= 1.4.2    && < 1.9
    , transformers          >= 0.3.0.0  && < 0.6

  if !impl(ghc >= 8.0)
    build-depends: semigroups >=0.18.4 && <0.19

  -- Servant dependencies
  build-depends:
      servant-client-core   == 0.14.*

  -- Other dependencies: Lower bound around what is in the latest Stackage LTS.
  -- Here can be exceptions if we really need features from the newer versions.
  build-depends:
      base-compat           >= 0.10.1   && < 0.11
    , http-client           >= 0.5.12   && < 0.6
    , http-media            >= 0.7.1.2  && < 0.8
    , http-types            >= 0.12.1   && < 0.13
    , exceptions            >= 0.10.0   && < 0.11
    , monad-control         >= 1.0.2.3  && < 1.1
    , semigroupoids         >= 5.2.2    && < 5.4
    , stm                   >= 2.4.5.0  && < 2.6
    , transformers-base     >= 0.4.5.2  && < 0.5
    , transformers-compat   >= 0.6.2    && < 0.7

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  if impl(ghc >= 8.0)
    ghc-options: -Wno-redundant-constraints
  include-dirs: include

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall -rtsopts -with-rtsopts=-T
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Servant.ClientSpec
      Servant.StreamSpec

  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
      base
    , aeson
    , base-compat
    , bytestring
    , http-api-data
    , http-client
    , http-types
    , mtl
    , servant-client
    , servant-client-core
    , text
    , transformers
    , transformers-compat
    , wai
    , warp

  if !impl(ghc >= 8.0)
    build-depends:
      semigroups

  -- Additonal dependencies
  build-depends:
      generics-sop      >= 0.3.2.0 && < 0.4
    , hspec             >= 2.5.1   && < 2.6
    , HUnit             >= 1.6     && < 1.7
    , network           >= 2.6.3.2 && < 2.9
    , QuickCheck        >= 2.10.1  && < 2.13
    , servant           == 0.14.*
    , servant-server    == 0.14.*

  build-tool-depends:
    hspec-discover:hspec-discover >= 2.5.1 && < 2.6

test-suite readme
  type:           exitcode-stdio-1.0
  main-is:        README.lhs
  build-depends:  base, servant, http-client, text, servant-client, markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit
  ghc-options:    -pgmL markdown-unlit
  default-language: Haskell2010
