name:                servant-conduit
version:             1
synopsis:            Servant Stream support for conduit.
description:         Servant Stream support for conduit.
homepage:            http://haskell-servant.readthedocs.org/
license:             BSD3
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2018 Servant Contributors
category:            Web, Servant, Enumerator
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         http://github.com/haskell-servant/servant-conduit/issues
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.2

source-repository head
  type: git
  location: http://github.com/haskell-servant/servant-conduit.git

library
  exposed-modules:     Servant.Conduit
  build-depends:
      base          >=4.9      && <5
    , bytestring    >=0.10.8.1 && <0.11
    , conduit       >=1.3.1    && <1.4
    , mtl           >=2.2.2    && <2.3
    , resourcet     >=1.2.2    && <1.3
    , servant       >=0.15     && <0.16
    , unliftio-core >=0.1.2.0  && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite example
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    example
  ghc-options: -Wall -rtsopts -threaded
  build-depends:
      base
    , base-compat
    , bytestring
    , conduit
    , http-media
    , resourcet
    , servant
    , servant-conduit
    , servant-server >=0.15     && <0.16
    , servant-client >=0.15     && <0.16
    , wai            >=3.2.1.2  && <3.3
    , warp           >=3.2.25   && <3.3
    , http-client
  default-language: Haskell2010
