cabal-version:       2.2
name:                servant-conduit
version:             0.16.1

synopsis:            Servant Stream support for conduit.
category:            Servant, Web, Enumerator
description:         Servant Stream support for conduit.
  .
  Provides 'ToSourceIO' and 'FromSourceIO' instances for 'ConduitT'.

homepage:            http://docs.servant.dev/
bug-reports:         http://github.com/haskell-servant/servant/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2018-2019 Servant Contributors
build-type:          Simple
tested-with: GHC ==8.10.7, GHC ==9.0.2, GHC ==9.2.8, GHC ==9.4.8, GHC ==9.6.4, GHC ==9.8.2

extra-source-files:
  CHANGELOG.md

source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:     Servant.Conduit
  build-depends:
      base          >=4.14     && <5
    , bytestring    >=0.10.8.1 && <0.13
    , conduit       >=1.3.1    && <1.4
    , mtl           ^>=2.2.2   || ^>=2.3.1
    , resourcet     >=1.2.2    && <1.4
    , servant       >=0.20.2   && <0.21
    , unliftio-core >=0.1.2.0  && <0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite example
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    example
  ghc-options: -Wall -rtsopts -threaded
  build-depends:
      base
    , base-compat
    , bytestring
    , conduit
    , http-media
    , resourcet
    , servant        >=0.20     && <0.21
    , servant-conduit
    , servant-server >=0.20.2   && <0.21
    , servant-client >=0.20.2   && <0.21
    , wai            >=3.2.1.2  && <3.3
    , warp           >=3.2.25   && <3.5
    , http-client
  default-language: Haskell2010
