name:                servant-docs
version:             0.11.1
synopsis:            generate API docs for your servant webservice
description:
  Library for generating API docs from a servant API definition.
  .
  Runnable example <https://github.com/haskell-servant/servant/blob/master/servant-docs/example/greet.hs here>.
  .
  <https://github.com/haskell-servant/servant/blob/master/servant-docs/CHANGELOG.md CHANGELOG>
license:             BSD3
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2014-2016 Zalora South East Asia Pte Ltd, Servant Contributors
category:            Servant, Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.8.4
  GHC==7.10.3
  GHC==8.0.2
  GHC==8.2.1
homepage:            http://haskell-servant.readthedocs.org/
Bug-reports:         http://github.com/haskell-servant/servant/issues
extra-source-files:
  include/*.h
  CHANGELOG.md
  README.md
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:
      Servant.Docs
    , Servant.Docs.Internal
    , Servant.Docs.Internal.Pretty
  build-depends:
      base >=4.7 && <5
    , base-compat >= 0.9.1 && <0.10
    , aeson
    , aeson-pretty
    , bytestring
    , case-insensitive
    , hashable
    , http-media >= 0.6
    , http-types >= 0.7
    , lens
    , servant == 0.12.*
    , string-conversions
    , text
    , unordered-containers
    , control-monad-omega == 0.3.*
  if !impl(ghc >= 8.0)
    build-depends:
      semigroups          >=0.17 && <0.19
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  if impl(ghc >= 8.0)
    ghc-options: -Wno-redundant-constraints
  include-dirs: include

executable greet-docs
  main-is: greet.hs
  hs-source-dirs: example
  ghc-options: -Wall
  build-depends:
      base
    , aeson
    , lens
    , servant
    , servant-docs
    , string-conversions
    , text
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Servant.DocsSpec
  build-tool-depends:
    hspec-discover:hspec-discover
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends:
      base
    , aeson
    , hspec
    , lens
    , servant
    , servant-docs
    , string-conversions
  default-language: Haskell2010
