name:                servant-examples
version:             0.4
synopsis:            Example programs for servant
description:         Example programs for servant,
                     showcasing solutions to common needs.
homepage:            http://haskell-servant.github.io/
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable getting-started
  main-is: getting-started.hs
  other-modules: GS1, GS2
  build-depends:
      aeson >= 0.8
    , base >= 4.7
    , directory
    , either
    , lucid
    , servant
    , servant-lucid
    , servant-server
    , time
    , transformers
    , wai
    , warp
  hs-source-dirs: getting-started
  default-language: Haskell2010

executable gs8-main
  main-is: gs8-main.hs
  hs-source-dirs: getting-started
  default-language: Haskell2010
  build-depends:
      aeson
    , base
    , either
    , servant
    , servant-client
    , servant-server
    , wai

executable hackage
  main-is:             hackage.hs
  build-depends:
      aeson >= 0.8
    , base >=4.7
    , either
    , servant == 0.4.*
    , servant-client == 0.4.*
    , text
    , transformers
  hs-source-dirs:      hackage
  default-language:    Haskell2010

executable wai-middleware
  main-is: wai-middleware.hs
  build-depends:
      aeson >= 0.8
    , base >= 4.7
    , servant
    , servant-server
    , text
    , wai
    , wai-extra
    , warp
  hs-source-dirs: wai-middleware
  default-language: Haskell2010

executable auth-combinator
  main-is: auth-combinator.hs
  build-depends:
      aeson >= 0.8
    , base >= 4.7
    , bytestring
    , http-types
    , servant
    , servant-server == 0.4.*
    , text
    , wai
    , warp
  hs-source-dirs: auth-combinator
  default-language: Haskell2010
