name:                servant-examples
version:             0.4.1
synopsis:            Example programs for servant
description:         Example programs for servant,
                     showcasing solutions to common needs.
homepage:            http://haskell-servant.github.io/
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tutorial
  main-is: tutorial.hs
  other-modules: T1, T2, T3, T4, T5, T6, T7, T8, T9, T10
  build-depends:
      aeson >= 0.8
    , base >= 4.7 && < 5
    , bytestring
    , directory
    , either
    , http-types
    , js-jquery
    , lucid
    , random
    , servant == 0.4.*
    , servant-docs == 0.4.*
    , servant-jquery == 0.4.*
    , servant-lucid == 0.4.*
    , servant-server == 0.4.*
    , text
    , time
    , transformers
    , wai
    , warp
  hs-source-dirs: tutorial
  default-language: Haskell2010

executable t8-main
  main-is: t8-main.hs
  hs-source-dirs: tutorial
  default-language: Haskell2010
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , either
    , servant == 0.4.*
    , servant-client == 0.4.*
    , servant-server == 0.4.*
    , wai

executable hackage
  main-is:             hackage.hs
  build-depends:
      aeson >= 0.8
    , base >=4.7 && < 5
    , either
    , servant == 0.4.*
    , servant-client == 0.4.*
    , text
    , transformers
  hs-source-dirs:      hackage
  default-language:    Haskell2010

executable wai-middleware
  main-is: wai-middleware.hs
  build-depends:
      aeson >= 0.8
    , base >= 4.7 && < 5
    , servant == 0.4.*
    , servant-server == 0.4.*
    , text
    , wai
    , wai-extra
    , warp
  hs-source-dirs: wai-middleware
  default-language: Haskell2010

executable auth-combinator
  main-is: auth-combinator.hs
  build-depends:
      aeson >= 0.8
    , base >= 4.7 && < 5
    , bytestring
    , http-types
    , servant == 0.4.*
    , servant-server == 0.4.*
    , text
    , wai
    , warp
  hs-source-dirs: auth-combinator
  default-language: Haskell2010
