name:                servant-examples
version:             0.5
synopsis:            Example programs for servant
description:         Example programs for servant,
                     showcasing solutions to common needs.
homepage:            http://haskell-servant.github.io/
license:             BSD3
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2015-2016 Servant Contributors
category:            Web
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         http://github.com/haskell-servant/servant/issues
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

executable tutorial
  main-is: tutorial.hs
  other-modules: T1, T2, T3, T4, T5, T6, T7, T8, T9, T10
  ghc-options: -Wall -fno-warn-unused-binds -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-unused-imports
  build-depends:
      aeson >= 0.8
    , base >= 4.7 && < 5
    , bytestring
    , directory
    , http-types
    , js-jquery
    , lucid
    , random
    , servant == 0.5.*
    , servant-docs == 0.5.*
    , servant-js == 0.5.*
    , servant-lucid == 0.5.*
    , servant-server == 0.5.*
    , text
    , time
    , transformers
    , transformers-compat
    , wai
    , warp
  hs-source-dirs: tutorial
  default-language: Haskell2010

executable t8-main
  main-is: t8-main.hs
  other-modules: T3, T8
  hs-source-dirs: tutorial
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-unused-binds -fno-warn-name-shadowing
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , http-client > 0.4 && < 0.5
    , servant == 0.5.*
    , servant-client == 0.5.*
    , servant-server == 0.5.*
    , transformers
    , transformers-compat
    , wai

executable hackage
  main-is:             hackage.hs
  build-depends:
      aeson >= 0.8
    , base >=4.7 && < 5
    , http-client > 0.4 && < 0.5
    , servant == 0.5.*
    , servant-client == 0.5.*
    , text
    , transformers
    , transformers-compat
  hs-source-dirs:      hackage
  default-language:    Haskell2010

executable wai-middleware
  main-is: wai-middleware.hs
  build-depends:
      aeson >= 0.8
    , base >= 4.7 && < 5
    , servant == 0.5.*
    , servant-server == 0.5.*
    , text
    , wai
    , wai-extra
    , warp
  hs-source-dirs: wai-middleware
  default-language: Haskell2010

executable auth-combinator
  main-is: auth-combinator.hs
  ghc-options: -Wall -fno-warn-unused-binds -fno-warn-name-shadowing
  build-depends:
      aeson >= 0.8
    , base >= 4.7 && < 5
    , bytestring
    , http-types
    , servant == 0.5.*
    , servant-server == 0.5.*
    , text
    , transformers
    , wai
    , warp
  hs-source-dirs: auth-combinator
  default-language: Haskell2010

executable basic-auth
  main-is: basic-auth.hs
  ghc-options: -Wall -fno-warn-unused-binds -fno-warn-name-shadowing
  build-depends:
      aeson >= 0.8
    , base >= 4.7 && < 5
    , bytestring
    , http-types
    , servant == 0.5.*
    , servant-server == 0.5.*
    , text
    , wai
    , warp
  hs-source-dirs: basic-auth
  default-language: Haskell2010

executable socket-io-chat
  main-is: socket-io-chat.hs
  ghc-options: -Wall -fno-warn-unused-binds -fno-warn-name-shadowing
  other-modules: Chat
  build-depends:
      aeson >= 0.8
    , base >= 4.7 && < 5
    , bytestring
    , http-types
    , servant == 0.5.*
    , servant-server == 0.5.*
    , socket-io
    , engine-io
    , engine-io-wai
    , text
    , wai
    , warp
    , transformers
    , stm
    , mtl
  ghc-options: -Wall -O2 -threaded
  hs-source-dirs: socket-io-chat
  default-language: Haskell2010
